--- a/SpaceGame/Assembly-CSharp.csproj
+++ b/SpaceGame/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\CameraControl.cs" />
      <Compile Include="Assets\Scripts\ShipMovement.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
