--- a/SpaceGame/Assembly-CSharp.csproj
+++ b/SpaceGame/Assembly-CSharp.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\CameraControl.cs" />
      <Compile Include="Assets\Scripts\ShipMovement.cs" />
-     <Compile Include="Assets\particle.cs" />
+     <Compile Include="Assets\Scripts\particle.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
