Added a mini map with 'M' still working on trajectory

--- a/SpaceGame/Assembly-CSharp-vs.csproj
+++ b/SpaceGame/Assembly-CSharp-vs.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\MiniMap.cs" />
      <Compile Include="Assets\Scripts\CameraControl.cs" />
      <Compile Include="Assets\Scripts\GravScript.cs" />
      <Compile Include="Assets\Scripts\Gravity.cs" />
